package net.combatserver.protobuf; 

option optimize_for = SPEED;  

enum ReturnStatus {

	STATUS_OK = 0;
	STATUS_FAILED = -10;


	STATUS_ROOM_CREATE_FAILED = -11;
	STATUS_ROOM_FULL = -12;
	STATUS_ROOM_LOCKED = -13;
	STATUS_ROOM_NOT_FOUND = -14;
	STATUS_ROOM_NEED_PASWORD = -15;
	STATUS_ROOM_WRONG_PASSWORD = -16;
	STATUS_ROOM_TEMPLATE_NOT_FOUND = -17;
	STATUS_ROOM_NULL = -18;
	STATUS_ZONE_FULL = -19;
	STATUS_ZONE_NOT_FOUND = -20;
	STATUS_SERVER_FULL = -21;
	STATUS_USER_NOT_FOUND = -22;

	STATUS_PLUGIN_NOT_FOUND = -25;
	STATUS_PLUGIN_ACTION_NOT_FOUND = -26;
	STATUS_PLUGIN_PARAMETER_ERROR = -27;

	STATUS_NAME_CONTAINS_BAD_WORD = -30;
	STATUS_NAME_USED = -31;
	STATUS_AUTH_FAILED = -33;
	STATUS_INVID_REQUEST = -34;
	STATUS_INVID_REQUEST_DATA = -35;
	STATUS_INTERNAL_ERROR = -36;
	STATUS_UNKNOWN_ERROR = -37;
	STATUS_CONNECT_ERROR = -38;
	STATUS_EXPIRED_CERTIFICATE = -39;

	STATUS_SCHEDULED_NOT_FOUND = -40;

}

message ServerErrorResponseData{
  required ReturnStatus error = 1;
}
